--- a/udacity-mlnd/grains_futures_prices_prognosticator/grains_futures_prices_prognosticator.ipynb
+++ b/udacity-mlnd/grains_futures_prices_prognosticator/grains_futures_prices_prognosticator.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -169,14 +169,14 @@
        "4                      5687.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_fut_orig = pd.read_csv('data\\CHRIS-CME_C1.csv')\n",
-    "df_fut_orig.head()"
+    "df_fut_orig.head(n=5)"
    ]
   },
   {
@@ -387,12 +387,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Drop Drop unnecessary columns columns"
+    "### Drop unnecessary columns columns and resamle data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -416,6 +416,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Open</th>\n",
        "      <th>Settle</th>\n",
        "      <th>Volume</th>\n",
        "    </tr>\n",
@@ -423,31 +424,37 @@
        "      <th>Date</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2018-07-10</th>\n",
+       "      <td>344.25</td>\n",
        "      <td>339.75</td>\n",
        "      <td>2668.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-07-09</th>\n",
+       "      <td>346.00</td>\n",
        "      <td>345.75</td>\n",
        "      <td>3190.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-07-06</th>\n",
+       "      <td>342.00</td>\n",
        "      <td>351.75</td>\n",
        "      <td>3068.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-07-05</th>\n",
+       "      <td>345.50</td>\n",
        "      <td>343.50</td>\n",
        "      <td>3302.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-07-03</th>\n",
+       "      <td>340.25</td>\n",
        "      <td>342.75</td>\n",
        "      <td>3048.0</td>\n",
        "    </tr>\n",
@@ -456,31 +463,127 @@
        "</div>"
       ],
       "text/plain": [
-       "            Settle  Volume\n",
-       "Date                      \n",
-       "2018-07-10  339.75  2668.0\n",
-       "2018-07-09  345.75  3190.0\n",
-       "2018-07-06  351.75  3068.0\n",
-       "2018-07-05  343.50  3302.0\n",
-       "2018-07-03  342.75  3048.0"
+       "              Open  Settle  Volume\n",
+       "Date                              \n",
+       "2018-07-10  344.25  339.75  2668.0\n",
+       "2018-07-09  346.00  345.75  3190.0\n",
+       "2018-07-06  342.00  351.75  3068.0\n",
+       "2018-07-05  345.50  343.50  3302.0\n",
+       "2018-07-03  340.25  342.75  3048.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_fut=df_fut_orig.drop(columns=[clmn for i,clmn in enumerate(df_fut_orig.columns) if i not in [0,6,7] ],axis=1)\n",
+    "df_fut=df_fut_orig.drop(columns=[clmn for i,clmn in enumerate(df_fut_orig.columns) if i not in [0,1,6,7] ],axis=1)\n",
     "\n",
     "df_fut['Date'] = pd.to_datetime(df_fut['Date'])\n",
     "df_fut.set_index('Date',inplace=True)\n",
+    "\n",
     "df_fut.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Settle</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2006-06-18</th>\n",
+       "      <td>234.00</td>\n",
+       "      <td>235.50</td>\n",
+       "      <td>56486.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-06-25</th>\n",
+       "      <td>234.00</td>\n",
+       "      <td>228.25</td>\n",
+       "      <td>28361.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-07-02</th>\n",
+       "      <td>227.00</td>\n",
+       "      <td>235.50</td>\n",
+       "      <td>30519.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-07-09</th>\n",
+       "      <td>239.25</td>\n",
+       "      <td>241.00</td>\n",
+       "      <td>13057.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-07-16</th>\n",
+       "      <td>246.50</td>\n",
+       "      <td>253.50</td>\n",
+       "      <td>2460.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Open  Settle   Volume\n",
+       "Date                               \n",
+       "2006-06-18  234.00  235.50  56486.0\n",
+       "2006-06-25  234.00  228.25  28361.0\n",
+       "2006-07-02  227.00  235.50  30519.0\n",
+       "2006-07-09  239.25  241.00  13057.0\n",
+       "2006-07-16  246.50  253.50   2460.0"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s_open =df_fut['Open'].resample('W').first()\n",
+    "s_settle =df_fut['Settle'].resample('W').last()\n",
+    "s_volume =df_fut['Volume'].resample('W').last()\n",
+    "df_fut_weekly = pd.concat([s_open, s_settle,s_volume], axis=1)\n",
+    "df_fut_weekly.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -488,13 +591,13 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 3034 entries, 0 to 3033\n",
+      "DatetimeIndex: 3034 entries, 2018-07-10 to 2006-06-16\n",
       "Data columns (total 3 columns):\n",
-      "Date      3034 non-null datetime64[ns]\n",
+      "Open      3033 non-null float64\n",
       "Settle    3034 non-null float64\n",
       "Volume    3034 non-null float64\n",
-      "dtypes: datetime64[ns](1), float64(2)\n",
-      "memory usage: 71.2 KB\n"
+      "dtypes: float64(3)\n",
+      "memory usage: 94.8 KB\n"
      ]
     }
    ],
